# ai

./: .env.example  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-config.yaml.safe  .resume_sdlc_prompt.md  .setup_progress  .stash-manifest.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_LOCK_ANALYSIS.md  DATABASE_LOCK_FIXES_IMPLEMENTED.md  DUPLICATE_TOOLS_CONSOLIDATION.md  GEMINI.md  MIGRATION_COMPLETE.md  Makefile  Procfile  README.md  REBUILD_CLEANUP_PLAN.md  TASK_AI_SKILLS_UPDATE.md  TEST_RESULTS_CLASSIFIER.md  UNIFIED_SYSTEM_TEST_REPORT.md  __init__.py  app.yaml  bad_bracket.py  build.sh  build_worker.sh  check_promises.py  cleanup_for_rebuild.sh  com.valor.autoexperiment.plist  com.valor.daydream.plist  com.valor.email-bridge.plist  com.valor.issue-poller.plist  com.valor.log-rotate.plist  com.valor.nightly-tests.plist  com.valor.reflection-worker.plist  com.valor.reflections.plist  com.valor.sdlc-reflection.plist  (+38 more)
.claude/: README.md  settings.json
.githooks/: pre-commit
.opencode/: SYNC_MANIFEST.json  opencode.json
.ua/: .understandignore
.zed/: settings.json  tasks.json
_archive_/: .gitignore  agent.py  manage.py
_toms_studies_/: notes.ipynb
agent/: __init__.py  agent_definitions.py  agent_session_queue.py  anthropic_client.py  branch_manager.py  build_pipeline.py  byob_skill_triggers.py  cancel_reason.py  checkpoint.py  claude_session.py  cold_start_metrics.py  completion.py  constants.py  context_modes.py  crash_signature.py  embedding_provider.py  finding_extraction.py  finding_query.py  goal_gates.py  granite_agent_loop.py  granite_router.py  health_check.py  hibernation.py  index_drift.py  intent_classifier.py  job_queue.py  memory_extraction.py  memory_hook.py  memory_quality.py  memory_retrieval.py  messenger.py  motives.py  notification_copy.py  output_handler.py  output_router.py  pipeline_complete.py  pipeline_graph.py  pipeline_ledger.py  pipeline_state.py  pr_manager.py  (+36 more)
agents/: README.md  __init__.py  agents.md  context_manager.py  message_history_converter.py  notion_scout.py  resource_monitor.py  streaming_optimizer.py  telegram_chat_agent.py  tool_registry.py  unified_integration.py  unified_valor_claude_agent.py  valor_agent.py
aihelps/: dog_breed.ipynb  dog_breed.py  dog_breeds.ipynb  dog_breeds.py
analytics/: __init__.py  collector.py  query.py  rollup.py
api_clients/: airbyte_api_client.py
bridge/: __init__.py  agent_catchup.py  agents.py  catchup.py  coach.py  config_validation.py  context.py  dead_letters.py  dedup.py  dedup_seed.py  dispatch.py  email_bridge.py  email_dead_letter.py  email_relay.py  enrichment.py  escape_hatch.py  formatting.py  health.py  hibernation.py  knowledge_watcher.py  liveness.py  log_format.py  markdown.py  media.py  message_drafter.py  message_quality.py  observer.py  pipeline_graph.py  pipeline_state.py  promise_gate.py  read_the_room.py  reconciler.py  redundancy_filter.py  resilience.py  response.py  routing.py  session_logs.py  session_router.py  session_transcript.py  silent_stream.py  (+6 more)
config/: PRINCIPAL.md  README.md  SOUL.md  __init__.py  bcu_pin.json  byob_pin.json  database.py  enums.py  identity.json  loader.py  machine.py  mcp_library.json  memory_defaults.py  models.py  newsyslog.conf.template  newsyslog.valor.conf  paths.py  project_key_resolver.py  projects.example.json  projects.json  projects.json.example  redis_bootstrap.py  reflections.yaml  server.py  settings.py  setup_config.py  workspace_config.json
data/: README.md  retroactive-audit-set.json
docs/: AI_CONVENTIONS.md  AI_INTEGRATION_CHECKLIST.md  ARCHITECTURE.md  ARCHITECTURE_MODERNIZATION_PLAN.md  BRANDING_BRIEF.md  CLAWDBOT_MIGRATION_PLAN.md  CONSOLIDATED_DOCUMENTATION.md  CTO_TOOLS_FINAL_FRAMEWORK.md  CTO_TOOLS_LLM_WORKFLOW.md  CTO_TOOLS_UPDATE_SUMMARY.md  ERROR_HANDLING.md  Feature-Prioritization-Matrix.md  MCP-Library-Requirements.md  MCPB_BUNDLE_FIX.md  MCP_CLIENT_CONFIGURATIONS.md  MCP_DEVELOPMENT_GUIDE.md  MIGRATION_GUIDE.md  PRD-AI-System-Rebuild.md  PROGRESS_SUMMARY.md  PYDANTIC_AI_EXAMPLES_AND_PATTERNS.md  PYDANTIC_AI_INTEGRATION.md  README.md  RENDER_DEPLOYMENT.md  REPO_MAP.md  SKILLS_MIGRATION.md  SOP-Implementation-Plan.md  SYSTEM_STATUS.md  Security-Compliance-Requirements.md  TAILWIND_V4.md  TELEGRAM.md  TELEGRAM_CLIENT.md  TELEGRAM_INTEGRATION_SCOPE.md  TEMPLATE_CONVENTIONS.md  TODO.md  TOOL_REBUILD_REQUIREMENTS.md  User-Journey-Maps.md  agent-architecture.md  claude_sdk_integration.md  complete-data-model.md  convert_to_pdf.py  (+30 more)
docs-rebuild/: EXTRACTION_STRATEGY.md  FEATURE_INVENTORY.md  Operational-Requirements-SLAs.md  PRD-AI-System-Rebuild.md  README.md
essays/: Context-is-King.md  Personality-Vectoring-Psy-Notes.md  Personality-Vectoring.md  README.md  Vectorized-Identity-Research.md
examples/: agent_demo.py  mcp_integration_demo.py
integrations/: __init__.py  airbyte_api_client.py  bing.py  intent_prompts.py  intent_tools.py  ollama_intent.py  persona.md  system_integration.py  youtube_transcription.py
intent/: __init__.py
mcp/: __init__.py
mcp_catalog/: __init__.py  library.py
mcp_servers/: __init__.py  base.py  context_manager.py  development_tools.py  memory_server.py  notion_tools.py  orchestrator.py  pm_tools.py  reflections_server.py  social_tools.py  telegram_tools.py
models/: __init__.py  agent.py  agent_session.py  bridge_event.py  chat.py  child_session_gate.py  content_decode.py  conversation.py  crash_signature.py  cyclic_episode.py  daydream.py  dead_letter.py  dedup.py  document_chunk.py  events.py  finding.py  ghost_reconcile.py  graceful_embedding_field.py  knowledge_document.py  last_processed.py  length_safe_content_store.py  link.py  memory.py  memory_distill_gate.py  memory_gate.py  migration_pending_clear.py  models.py  pr_review_audit.py  procedural_pattern.py  reflection.py  reflection_ignore.py  reflection_run.py  reflections.py  seen_issue.py  session_event.py  session_lifecycle.py  session_log.py  sessions.py  task_type_profile.py  teammate_metrics.py  (+3 more)
modules/: __init__.py
monitoring/: __init__.py  alerts.py  health.py  (+11 more)
(+5843 files in other folders)
