[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps"]

[project]
name = "cuttlefish"
version = "0.1.0"
description = "Multi-tool MCP Server Platform - B2B SaaS for various integrations via Model Context Protocol"
readme = "README.md"
authors = [
    {name = "Tom Counsell", email = "tom@yuda.me"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-debug-toolbar>=6.1.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "psycopg2",
    "python-dotenv",
    "dj-database-url",
    "gunicorn",
    "whitenoise",
    "django-storages>=1.14.6",
    "django-widget-tweaks>=1.5.0",
    "django-htmx>=1.26.0",
    "django-unfold>=0.71.0",
    "selenium",
    "django-tailwind-cli>=4.4.2",
    "drf-yasg>=1.21.10",
    "openai>=1.107.2",
    "pydantic-ai>=1.0.0,<2.0.0",
    "mcp>=1.23.0,<2.0.0",
    "django-redis>=6.0.0",
    "cryptography>=46.0.0",
    "pillow>=11.3.0",
    "certifi>=2025.8.3",
    "urllib3>=2.6.3",
    "requests>=2.32.4",
    "aiohttp>=3.13.3",
    "supabase>=2.28.0",
    "django-tasks-db>=0.12.0",
    "html2text>=2025.4.15",
    "markdown>=3.10.2",
    "notebooklm-py>=0.3.3",
    "kreuzberg>=4.4.6",
]

[project.optional-dependencies]
dev = [
    "django-browser-reload",
    "Werkzeug",
    "black",
    "isort",
    "flake8",
    "mypy",
    "django-stubs",
    "ipython",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock>=3.15.1",
    "factory-boy",
]
e2e = [
    "browser-use>=0.1.40",
    "playwright>=1.40.0",
    "pytest-asyncio>=0.23.0",
]

podcast = [
    "anthropic>=0.75.0",
    "openai-whisper>=20250625",
    "pillow>=12.0.0",
    "gpt-researcher>=0.14.6",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "google-genai>=0.5.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]
together-research = [
    "langchain>=1.2.10",
    "open-deep-research",
]

[project.urls]
Homepage = "https://github.com/tomcounsell/cuttlefish"
Issues = "https://github.com/tomcounsell/cuttlefish/issues"

[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.django-stubs]
django_settings_module = "settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = "test_*.py"
testpaths = ["apps"]
filterwarnings = [
    "ignore::RuntimeWarning:django.db.models.fields",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
e2e-testing = [
    "browser-use>=0.1.40",
    "playwright>=1.40.0",
    "pytest-asyncio>=0.23.0",
]
