[project]
name = "valor-bridge"
version = "0.1.0"
description = "Telegram bridge for Valor AI"
requires-python = ">=3.11"
dependencies = [
    "telethon==1.42.0", # CRITICAL — pin exact, upgrade via /update only
    "anthropic==0.116.0", # CRITICAL — pin exact, upgrade via /update only
    "pydantic-ai-slim[anthropic]==2.9.0", # CRITICAL — pin exact, upgrade via /update only. Slim + anthropic extra only (avoids openai/google/mcp/logfire/cli/evals/web extras pulled in by the `pydantic-ai` meta-package)
    "claude-agent-sdk==0.2.117", # CRITICAL — pin exact, upgrade via /update only
    "mcp>=1.8.0", # Required by claude-agent-sdk for ToolAnnotations (see issue #235)
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0", # Required for Google API requests transport
    "ollama>=0.3.0", # Local LLM fallback for summarization
    "yt-dlp>=2026.6.9", # YouTube audio download for transcription
    "youtube-transcript-api>=0.6.0", # Caption-based YouTube transcription (no API key required)
    "popoto>=1.7.1", # Redis ORM — agent memory primitives; v1.7.1 stamps auto_now/auto_now_add in UTC (#1653, popoto#421); v1.6.1 fixed lazy-load descriptor leak (#1099 + #1172)
    "google-auth-oauthlib>=1.2.0", # Google OAuth for Workspace APIs
    "google-auth-httplib2>=0.2.0", # Google Auth HTTP transport
    "google-api-python-client>=2.100.0", # Google API client
    "psutil>=5.9.0", # System resource monitoring for SDK diagnostics
    "pypdf>=6.13.3",  # 6.10.0 patches CVE: XMP metadata RAM exhaustion
    "html2text>=2024.2.26", # HTML to markdown conversion for web fetch
    "numpy>=1.26.0", # Vector math for semantic doc impact finder
    "openai>=1.0.0", # Embedding API for semantic doc impact finder
    "pyyaml>=6.0.3",
    "rich>=13.0.0", # Required by pydantic logfire plugin
    "sentry-sdk>=2.0.0", # Error monitoring and performance tracing
    "tiktoken>=0.7.0", # Token counting for document chunk boundaries
    "watchdog>=4.0.0", # Filesystem watcher for knowledge document indexing
    "fastapi>=0.115.0", # Web UI framework
    "uvicorn[standard]>=0.34.0", # ASGI server for web UI
    "jinja2>=3.1.0", # Template engine for web UI
    "pillow>=10.0.0", # Screenshot downscaling to stay within Claude's 2000px image dimension limit
    "croniter>=2.0.0", # Cron expression parser for unified Reflection schedule grammar (#1273)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-json-report>=1.5",
    "pytest-timeout>=2.3",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
# Multi-format document ingestion for the knowledge pipeline.
# Deliberate exclusions (documented in docs/features/markitdown-ingestion.md):
# - markitdown audio extra: uses unauthenticated Google Web Speech API key;
#   privacy-unacceptable for consulting material (see plan spike-2)
# - markitdown YouTube extra: tools/valor_youtube_search already uses
#   youtube-transcript-api (see line 16); valor-ingest delegates to that path
# PDF backend resolution (Task 1a result, 2026-04-24 uv lock on Python 3.14):
#   - pdfminer-six 20251230 (primary extractor for markitdown[pdf])
#   - pypdfium2 5.7.1 (transitive via pdfplumber)
#   - pypdf 6.10.2 (our direct CVE-safe pin, line 22 — no conflict)
# onnxruntime>=1.25.0 is required because magika (transitive) pulls older
# onnxruntime that lacks cp314 wheels; 1.25.0 ships Python 3.14 wheels.
knowledge = [
    "markitdown[pdf,docx,pptx,xlsx,outlook]>=0.1.0",
    "onnxruntime>=1.25.0",
]
# Optional local TTS via Kokoro ONNX. Cloud fallback (OpenAI tts-1) works
# without this extra; install it on machines that want offline synthesis.
# Pair with `python scripts/download_kokoro_models.py` and `brew install ffmpeg`.
tts = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "onnxruntime>=1.25.0",
]

[project.scripts]
critique-roster-check = "tools.critique_roster_check:main"
critique-resume-probe = "tools.critique_resume:main"
valor-telegram = "tools.valor_telegram:main"
valor-catchup = "bridge.agent_catchup:main"
valor-email = "tools.valor_email:main"
valor-calendar = "tools.valor_calendar:main"
valor-image-gen = "tools.image_gen:main"
valor-selfie = "tools.selfie:main"
valor-image-analyze = "tools.image_analysis:main"
valor-search = "tools.web:cli_search"
valor-fetch = "tools.web:cli_fetch"
valor-sms-reader = "tools.sms_reader.cli:main"
valor-image-tagging = "tools.image_tagging:main"
valor-youtube-search = "tools.youtube_search.cli:main"
valor-youtube-transcribe = "tools.link_analysis.cli:main"
valor-video-watch = "tools.video_watch.cli:main"
valor-ingest = "tools.valor_ingest:main"
valor-tts = "tools.tts.cli:main"
valor-deck-video = "tools.deck_video.cli:main"
valor-computer = "tools.computer.cli:main"
valor = "tools.valor_cli:main"
valor-cross-vendor-judge = "tools.cross_vendor_judge:main"
valor-session-archive = "tools.session_archive_cli:main"
valor-venv-health = "tools.venv_health:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bridge", "tools", "scripts", "agent", "utils", "ui"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S110", "S112"]

# S110/S112 (silent try-except-pass/continue) scoping for the resilience sweep
# (#2004, T1.5). In scope: agent/, bridge/, tools/, worker/, monitoring/, plus
# the four scripts files this sweep touches. Everything else is ignored via the
# negated glob below (per-file-ignores can only ignore, so scope is expressed
# as "ignore everything OUTSIDE the sweep paths"). Per #2004 OQ1, scripts/
# files not touched by this sweep adopt S110/S112 when next touched: delete
# their ignore coverage by adding them to the negated glob's allow-list.
[tool.ruff.lint.per-file-ignores]
"!{agent/**,bridge/**,tools/**,worker/**,monitoring/**,scripts/_baseline_common.py,scripts/baseline_gate.py,scripts/refresh_test_baseline.py,scripts/update/reflection_register.py}" = [
    "S110",
    "S112",
]
# tools/sdlc_*.py and tools/_sdlc_utils.py are owned by the concurrent
# sdlc-run-ownership-merge-enforcement plan — off-limits to this sweep, so
# their silent-except sites are allowlisted here instead of edited (#2004).
"tools/sdlc_*.py" = ["S110", "S112"]
"tools/_sdlc_utils.py" = ["S110", "S112"]
# In-package test helpers follow the same policy as tests/ (out of scope).
"tools/**/tests/*" = ["S110", "S112"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# -p no:postgresql: disable pytest-postgresql plugin which crashes on systems where
# psycopg/libpq is not installed (see issue #265)
# -n auto: parallelize via pytest-xdist (workers per CPU). Tests that require
# raw Redis access must use the per-worker `redis_test_url` fixture or read
# `PYTEST_XDIST_WORKER` to pick the matching db (see tests/conftest.py).
# --dist=loadfile: keep all tests in one file on the same worker. Three
# integration files (test_design_system_pipeline.py, test_remote_update.py,
# test_stage_comment.py) share global resources between their tests (npm
# caches, host lockfiles, a single GitHub issue) and would otherwise fail
# under inter-test parallelism. Loadfile is the simplest scheduler that
# fixes that while preserving inter-file parallelism.
#
# Worker reaping: xdist workers run via
# `python -c "import sys;exec(eval(sys.stdin.readline()))"` which
# installs no signal handlers. If the parent shell dies (timeout,
# agent interrupt, Ctrl-C) the workers get reparented to init and
# stay alive consuming memory. Agent-invoked pytest runs should use
# `scripts/pytest-clean.sh` instead of bare `pytest`; it snapshots
# worker PIDs and reaps them on EXIT/INT/TERM/HUP/PIPE. If a
# non-wrapper pytest run leaves orphans, `scripts/reap-xdist.sh`
# kills them in one shot.
addopts = "--tb=short -p no:postgresql -n auto --dist=loadfile"
asyncio_mode = "auto"
markers = [
    "unit: Pure logic tests, no external dependencies",
    "integration: Tests requiring Redis or network",
    "e2e: Full stack end-to-end tests",
    "slow: Long-running benchmarks and endurance tests",
    # Feature markers - use with: pytest -m <feature>
    "messaging: Telegram message reception, routing, delivery, formatting",
    "sdlc: SDLC pipeline stages, observer, steering, hooks",
    "sessions: Session lifecycle, watchdog, stall detection, recovery",
    "jobs: Job scheduling, queue, priority, health monitoring",
    "reflections: Learning system, bug detection, scheduling, reports",
    "tools: Individual tools (search, execution, analysis)",
    "config: Configuration loading, settings, project setup",
    "git: Branch management, worktrees, workspace safety",
    "validation: Commit messages, plan sections, build checks",
    "classifiers: Message classification, intake, work requests",
    "context: Context modes, session tags, enrichment",
    "monitoring: Health checks, telemetry, resource monitoring",
    "macos_only: Tests that require macOS (launchctl, pgrep Darwin semantics)",
    "summarizer: Response summarization, coaching, message quality",
    "sdk: Claude SDK client, permissions, SDLC enforcement",
    "impact: Code and documentation impact analysis",
    "models: Redis/Popoto model relationships and persistence",
    "webui: Web UI dashboards, routes, templates",
    "analytics: Unified analytics collection, query, and dashboard",
]
